--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,21 @@
 body {
-  font-size: 16px;
-  color: #fff;
+    color: #fff;
   background-color: #61122f;
-  font-family: 'Oxygen', sans-serif;
-}
+ }
 
 /** HEADER **/
 #header-nav {
-  background-color: #f6b319;
+  background-color: #FFDAB9;
   border-radius: 0;
   border: 0;
-}
-
-#logo-img {
-  background: url('../images/restaurant-logo_large.png') no-repeat;
-  width: 150px;
-  height: 150px;
-  margin: 10px 15px 10px 0;
 }
 
 .navbar-brand {
   padding-top: 25px;
 }
-
-.navbar-brand h1 { /* Restaurant name */
+.navbar-brand h1 { 
   font-family: 'Lora', serif;
-  color: #557c3e;
+  color: #B22222;
   font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
@@ -37,12 +27,200 @@ body {
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
-.navbar-brand p { /* Kosher cert */
-  color: #000;
-  text-transform: uppercase;
-  font-size: .7em;
-  margin-top: 15px;
+
+#nav-list {
+  margin-top: 10px;
+   font-weight: bold;
 }
-.navbar-brand p span { /* Star-K */
-  vertical-align: middle;
+#nav-list a {
+  color: #B22222;
+  text-align: center;
+}
+#nav-list a:hover {
+  background: #E7E7E7;
+}
+#nav-list a span {
+  font-size: 1.8em;
+}
+
+#phone {
+  margin-top: 5px;
+}
+#phone a { /* Phone number */
+  text-align: right;
+  padding-bottom: 0;
+}
+#phone div { /* We Deliver */
+  color: #557c3e;
+  text-align: right;
+  padding-right: 15px;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #61122f;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+}
+/* END HEADER */
+
+/* FOOTER */
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials {
+  font-style: italic;
+}
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
+/* END FOOTER */
+
+
+
+/* HOME PAGE */
+.container .jumbotron {
+  box-shadow: 0 0 50px #3F0C1F;
+  border: 2px solid #3F0C1F;
+}
+
+#menu-tile, #specials-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+#menu-tile {
+  background: url('../images/menu-tile.jpg') no-repeat;
+  background-position: center;
+}
+#specials-tile {
+  background: url('../images/specials-tile.jpg') no-repeat;
+  background-position: center;
+}
+#menu-tile span, #specials-tile span, #map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+
+p {
+  margin: 0;
+  background-color: grey;
+  font-family: Comic Sans MS;
+  margin-right: auto;
+  margin-left: auto;
+  float: left;
+ 
+}
+
+
+
+.div {
+  padding: 0 0 30px 30px;
+  border: 1px solid black ;
+  background-color: grey;
+  font-family: Comic Sans MS;
+   
+  float: left;}
+
+
+
+
+/* END HOME PAGE */
+
+
+  /* End Header */
+
+ 
+}
+
+
+/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
+@media (max-width: 479px) {
+  /* Header */
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 5px;
+    font-size: 6vw;
+  }
+  /* End Header */
+  
+  /* Home page */
+  #menu-tile, #specials-tile {
+    width: 280px;
+    margin: 0 auto 15px;
+  }
+}
+
+
+
+/********** media **********/
+
+@media (min-width: 992px) {
+  .div1, .div2, .div3 {
+    width: 30%;
+    margin-right: 1%;
+    margin-left: 1%;
+    float: left;
+
+  }
+
+}
+   
+@media (min-width: 768px) and (max-width: 991px) {
+  .div1, .div2  {
+     width: 48%;
+    margin-right: 1%;
+    margin-left: 1%;
+    float: left;
+    margin-bottom: 2%;
+    
+  }
+
+   .div3{
+    width: 98%;
+    margin-right: 1%;
+    margin-left: 1%;
+   }
+ }
+
+
+@media  (max-width: 767px) {
+  .div1, .div2, .div3 {
+    width: 98%;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-bottom: 4%;
+  }
 }
